# hydrofem

./: .gitignore  CMakeLists.txt  CMakePresets.json  Copyright.txt  Readme.md
.github/workflows/: cmake.yml
disc_fe/: Hydrofem_Bernstein_Basis_Line.cpp  Hydrofem_Bernstein_Basis_Line.hpp  Hydrofem_Bernstein_Basis_Quadrilateral.cpp  Hydrofem_Bernstein_Basis_Quadrilateral.hpp  Hydrofem_Bernstein_Basis_Triangle.cpp  Hydrofem_Bernstein_Basis_Triangle.hpp  Hydrofem_Bernstein_Nodes.cpp  Hydrofem_Bernstein_Nodes.hpp  Hydrofem_ComputeError.cpp  Hydrofem_ComputeError.hpp  Hydrofem_DofMapper.hpp  Hydrofem_FEBasis.hpp  Hydrofem_FEError.hpp  Hydrofem_FEQuadrature.cpp  Hydrofem_FEQuadrature.hpp  Hydrofem_FEQuadrature_Dunavant.cpp  Hydrofem_FEQuadrature_Dunavant.hpp  Hydrofem_FEQuadrature_Line.cpp  Hydrofem_FEQuadrature_Line.hpp  Hydrofem_FEQuadrature_Quadrilateral.cpp  Hydrofem_FEQuadrature_Quadrilateral.hpp  Hydrofem_FEQuadrature_Segment.hpp  Hydrofem_FEUtils.cpp  Hydrofem_FEUtils.hpp  Hydrofem_FunctionElement.cpp  Hydrofem_FunctionElement.hpp  Hydrofem_FunctionElement_impl.hpp  Hydrofem_FunctionFE.hpp  Hydrofem_GlobalConvectionMatrix.cpp  Hydrofem_GlobalConvectionMatrix.hpp  Hydrofem_GlobalMassMatrix.cpp  Hydrofem_GlobalMassMatrix.hpp  Hydrofem_HGrad_DofMapper_Line.cpp  Hydrofem_HGrad_DofMapper_Line.hpp  Hydrofem_HGrad_DofMapper_Quadrilateral.cpp  Hydrofem_HGrad_DofMapper_Quadrilateral.hpp  Hydrofem_HGrad_DofMapper_Triangle.cpp  Hydrofem_HGrad_DofMapper_Triangle.hpp  Hydrofem_IOBase.cpp  Hydrofem_IOBase.hpp  (+35 more)
docker/: DockerFile
driver/: Hydrofem_AnalyticalExpressions.hpp  Hydrofem_AssemblerFactory.cpp  Hydrofem_AssemblerFactory.hpp  Hydrofem_Assembler_Base.hpp  Hydrofem_Assembler_Bioseparation.cpp  Hydrofem_Assembler_Bioseparation.hpp  Hydrofem_Assembler_Bioseparation_MatrixForm.cpp  Hydrofem_Assembler_Bioseparation_MatrixForm.hpp  Hydrofem_Assembler_CDR.cpp  Hydrofem_Assembler_CDR.hpp  Hydrofem_Assembler_Poisson.cpp  Hydrofem_Assembler_Poisson.hpp  Hydrofem_ComputeError.cpp  Hydrofem_ComputeError.hpp  Hydrofem_DofMapperFactory.cpp  Hydrofem_DofMapperFactory.hpp  Hydrofem_Driver.hpp  Hydrofem_DriverFactory.cpp  Hydrofem_DriverFactory.hpp  Hydrofem_Driver_SteadySingleEquationSet.cpp  Hydrofem_Driver_SteadySingleEquationSet.hpp  Hydrofem_Driver_TransientSingleEquationSet.cpp  Hydrofem_Driver_TransientSingleEquationSet.hpp  Hydrofem_GlobalGather.cpp  Hydrofem_GlobalGather.hpp  Hydrofem_IOFactory.cpp  Hydrofem_IOFactory.hpp  Hydrofem_InitialSolution.cpp  Hydrofem_InitialSolution.hpp  Hydrofem_LinearObjectBuilder.hpp  Hydrofem_MeshFactory.cpp  Hydrofem_MeshFactory.hpp  Hydrofem_ModelEvaluator.cpp  Hydrofem_ModelEvaluator.hpp  Hydrofem_NewtonSolver.cpp  Hydrofem_NewtonSolver.hpp  Hydrofem_Stepper.hpp  Hydrofem_StepperFactory.cpp  Hydrofem_StepperFactory.hpp  Hydrofem_Stepper_Classic_Theta.cpp  (+5 more)
driver/afc_stab/: Hydrofem_AFC_LPSLimiter.cpp  Hydrofem_AFC_LPSLimiter.hpp  Hydrofem_AFC_Limiter.hpp  Hydrofem_AFC_LocalDiffusionMatrix.cpp  Hydrofem_AFC_LocalDiffusionMatrix.hpp
driver/physics/: Hydrofem_BC.hpp  Hydrofem_BCFactory.cpp  Hydrofem_BCFactory.hpp  Hydrofem_BC_Bioseparation.cpp  Hydrofem_BC_Bioseparation.hpp  Hydrofem_BC_CDR.cpp  Hydrofem_BC_CDR.hpp  Hydrofem_BC_EulerEquations.cpp  Hydrofem_BC_EulerEquations.hpp  Hydrofem_BC_ReactiveFlow.cpp  Hydrofem_BC_ReactiveFlow.hpp  Hydrofem_BC_Scalar.cpp  Hydrofem_BC_Scalar.hpp  Hydrofem_Equation.hpp  Hydrofem_Equation_Euler.cpp  Hydrofem_Equation_Euler.hpp  Hydrofem_Equation_Euler_impl.hpp  Hydrofem_Equation_Linear.cpp  Hydrofem_Equation_Linear.hpp  Hydrofem_Equation_Linear_impl.hpp  Hydrofem_Equation_TaylorDispersion.cpp  Hydrofem_Equation_TaylorDispersion.hpp  Hydrofem_Equation_TaylorDispersion_impl.hpp  Hydrofem_IC_ReactiveFlowWithBlob.cpp  Hydrofem_IC_ReactiveFlowWithBlob.hpp  Hydrofem_IC_TaylorDispersion.cpp  Hydrofem_IC_TaylorDispersion.hpp  Hydrofem_InitialCondition.hpp  Hydrofem_InitialSolution.cpp  Hydrofem_InitialSolution.hpp  Hydrofem_InitialSolution_HyperbolicSystem.cpp  Hydrofem_InitialSolution_HyperbolicSystem.hpp  Hydrofem_InitialSolution_ReactiveFlow.cpp  Hydrofem_InitialSolution_ReactiveFlow.hpp  Hydrofem_Problem.hpp  Hydrofem_ProblemFactory.cpp  Hydrofem_ProblemFactory.hpp  Hydrofem_Problem_Bioseparation.cpp  Hydrofem_Problem_Bioseparation.hpp  Hydrofem_Problem_CDR.cpp  (+8 more)
linear/: Hydrofem_EigenFEVecMat.hpp  Hydrofem_LinearSolvers.cpp  Hydrofem_LinearSolvers.hpp
linear_solvers/: Hydrofem_LinearSolvers.cpp
main/: Hydrofem_Main.cpp
mesh/: Hydrofem_Edge.hpp  Hydrofem_Edge1D.hpp  Hydrofem_Edge2D.cpp  Hydrofem_Edge2D.hpp  Hydrofem_Element.hpp  Hydrofem_Element1D.hpp  Hydrofem_Element2D.cpp  Hydrofem_Element2D.hpp  Hydrofem_ElementShapeTools.hpp  Hydrofem_MFEM_Mesh.cpp  Hydrofem_MFEM_Mesh.hpp  Hydrofem_Mesh.hpp  Hydrofem_Mesh1D.cpp  Hydrofem_Mesh1D.hpp  Hydrofem_Mesh2D.cpp  Hydrofem_Mesh2D.hpp  Hydrofem_Mesh2D_Quad.cpp  Hydrofem_Mesh2D_Quad.hpp  Hydrofem_Mesh2D_Tri.cpp  Hydrofem_Mesh2D_Tri.hpp  Hydrofem_MeshTypes.hpp  Hydrofem_Neighbors.hpp  Hydrofem_NodeStencil.hpp  Hydrofem_SPoint.hpp
scripts/: ReadConfigMK.cmake  biosep.config  biosep_matlab_plot.m  configure.sh  default.config  instructions.txt  plot_u_2D.m  plot_u_2D.py  poisson.config  poisson_matlab_plot.m
scripts/edit_files/: main.py
tests/: Hydrofem_CTest_Default.cpp  Hydrofem_Disc_FE_gtests.hpp  Hydrofem_Linear_gtests.hpp  Hydrofem_Mesh_gtests.hpp  Hydrofem_gtests.cpp  disc_fe_utests.hpp  linear_utests.hpp  mesh_utests.hpp  utests.cpp
utils/: Hydrofem.hpp  Hydrofem_EigenFEVecMat.hpp  Hydrofem_GlobalConstants.hpp  Hydrofem_LocalArray.hpp  Hydrofem_OptionHandler.hpp  Hydrofem_ProgramOptions.hpp  Hydrofem_Simple_IO.hpp  Hydrofem_String_Utilities.cpp  Hydrofem_String_Utilities.hpp
